--- a/phy121.html
+++ b/phy121.html
@@ -32,7 +32,7 @@
   <div class="container-fluid">
     <div class="quick-actions_homepage">
       <ul class="quick-actions">
-        <li class="bg_lo span3"> <a href="lecturenotes.html"> <i class="icon-th-list"></i>Magnetism</a> </li>
+        <li class="bg_lo span3"> <a href="https://drive.google.com/open?id=19punX7WjZmSN9F4zZ18WGV50wTi-xEXD"> <i class="icon-th-list"></i>Magnetism</a> </li>
 
 
       </ul>
