--- a/facultyn.html
+++ b/facultyn.html
@@ -36,7 +36,7 @@
           <div class="widget-content nopadding">
             <ul class="recent-posts">
               <li>
-                <div class="user-thumb"> <img width="40" height="40" alt="User" src="img/profilepics/av1.jpg"> </div>
+                <div class="user-thumb"> <img width="40" height="40" alt="User" src="img/profilepics/star.jpg"> </div>
                 <div class="article-post">
                   <div class="fr"></div>
                   <span class="user-info"> By: Star Onah / Date: 7 Feb 2020 / Time:09:27 AM </span>
@@ -48,7 +48,7 @@
 
               <p><li>
 
-                <div class="user-thumb"> <img width="40" height="40" alt="User" src="img/profilepics/av1.jpg"> </div>
+                <div class="user-thumb"> <img width="40" height="40" alt="User" src="img/profilepics/star.jpg"> </div>
                 <div class="article-post">
                   <div class="fr"></div>
                   <span class="user-info"> By: Star Onah / Date: 7 Feb 2020 / Time:09:27 AM </span>
