--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -33,6 +33,7 @@
     <div class="quick-actions_homepage">
       <ul class="quick-actions">
         <li class="bg_lo span3"> <a href="phy121.html"> <i class="icon-th-list"></i>PHY 121</a> </li>
+<li class="bg_lo span3"> <a href="csc121.html"> <i class="icon-th-list"></i>CSC 121</a> </li>
 
 
       </ul>
