--- a/index.html
+++ b/index.html
@@ -1,53 +1,147 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>BIU ENG</title>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="css/bootstrap.min.css" />
-<link rel="stylesheet" href="css/matrix-style.css" />
-<link rel="stylesheet" href="css/matrix-media.css" />
-<link href="font-awesome/css/font-awesome.css" rel="stylesheet" />
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<link rel="apple-touch-icon" href="vision/files/images/apple-touch-icon.png" />
+<link rel="apple-touch-startup-image" href="vision/files/images/apple-touch-startup-image-320x460.png" />
+<meta name="author" content="SindevoThemes" />
+<meta name="description" content="vision - A next generation web app theme" />
+<meta name="keywords" content="mobile web app, mobile template, mobile design, mobile app design, mobile app theme, mobile wordpress theme, my mobile app" />
+<title>BIU Mobile by Vision</title>
+<link type="text/css" rel="stylesheet" href="vision/files/css/style.css"/>
+<link type="text/css" rel="stylesheet" href="vision/files/colors/main/main.css"/>
+<link type="text/css" rel="stylesheet" href="vision/files/css/idangerous.swiper.css"/>
+<link type="text/css" rel="stylesheet" href="vision/files/css/swipebox.css" />
+<link type="text/css" rel="stylesheet" href="vision/files/css/plyr.css"/>
+<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet"> 
+<script type="text/javascript" src="vision/files/js/jquery-1.10.1.min.js"></script>
+<script src="vision/files/js/jquery.validate.min.js" type="text/javascript"></script>
 </head>
 <body>
-
-<!--Header-part-->
 <div id="header">
-  <h1><a href="dashboard.html">BIU MOBILE</a></h1>
-</div>
-<!--close-Header-part--> 
-
-
-
-
-<!--main-container-part-->
-<div id="content">
-<!--breadcrumbs-->
-  <div id="content-header">
-    <div id="breadcrumb"> <a href="index.html" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> BIU ENGINEERING DEPARTMENT</a></div>
+      <div class="gohome radius20"><a href="#"><img src="vision/files/images/icons/home.png" alt="" title="" /></a></div>
+      <div class="gomenu radius20"><a href="#" onclick="swiperParent.swipeTo(9);"><img src="vision/files/images/icons/contact.png" alt="" title="" /></a></div>
   </div>
-<!--End-breadcrumbs-->
-
-<!--Action boxes-->
-  <div class="container-fluid">
-    <div class="quick-actions_homepage">
-      <ul class="quick-actions">
-        <li class="bg_lb"> <a href="generaln.html"> <i class="icon-dashboard"></i>  General Notification </a> </li>
-        <li class="bg_lg span3"> <a href="facultyn.html"> <i class="icon icon-inbox"></i> Faculty Notification</a> </li>
-        <li class="bg_lo span3"> <a href="lecturenotes.html"> <i class="icon-th-list"></i> Lecture Notes</a> </li>
-        <li class="bg_ls"> <a href="#"> <i class="icon-tint"></i> Questions</a> </li>
-        <li class="bg_lg"> <a href="#"> <i class="icon-calendar"></i> Time Table</a> </li>
-        <li class="bg_lr"> <a href="#"> <i class="icon-info-sign"></i> About Us</a> </li>
-
-      </ul>
+  <div class="swiper-container swiper-parent">
+    <div class="swiper-wrapper">
+<!--Menu page-->
+      <div class="swiper-slide sliderbg_menu">
+          <div class="swiper-container swiper-nested">
+                   <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                                  <div class="slide-inner">
+                                        <div class="logo"><a href="#"><img src="vision/files/colors/main/images/logo.png" alt="" title="" border="0" /></a></div>
+                                        <div class="menu">
+                                        <ul>
+                                        <li><a href="lecturenotes.html"><img src="vision/files/images/icons_colored/docs.png" alt="" title="" /><span>LECTURE NOTES</span></a></li>
+                                        <li><a href="#"><img src="vision/files/images/icons_colored/videos.png" alt="" title="" /><span>LECTURE VIDEOS</span></a></li>
+                                        <li><a href="#"><img src="vision/files/images/icons_colored/clients.png" alt="" title="" /><span>LECTUERS</span></a></li>
+                                        <li><a href="#"onclick="swiperParent.swipeTo(1);"><img src="vision/files/images/icons_colored/blog.png" alt="" title="" /><span>NOFICATIONS</span></a></li>
+                                        <li><a href="#"><img src="vision/files/images/icons_colored/photos.png" alt="" title="" /><span>GALLERY</span></a></li>
+                                        <li><a href="#"><img src="vision/files/images/icons_colored/contact.png" alt="" title="" /><span>CONTACT</span></a></li>
+                                        </ul>
+                                        <div class="clearfix"></div>
+                                        </div>
+                                 </div>
+                         </div>
+                   </div>
+                  <div class="swiper-scrollbar"></div>
+          </div> 
+      </div>
+<!--Page 1 content-->
+      <div class="swiper-slide sliderbg">
+      <div class="swiper-container swiper-nested">
+               <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                              <div class="slide-inner">
+                                        <div class="pages_container">
+                                        <h2 class="page_title">Notifications</h2>
+                                        <div class="image_single radius4"><img src="vision/files/images/page_photo.jpg" alt="" title="" border="0" /></div>
+                                        <h3>Welcome</h3>
+                                        <blockquote>Thank you for installing the BIU moobile app. get quick access to lecture notes, lecture videos and important informations from BIU.<span class="quote_author">-Star Onah</span></blockquote>
+                                        <div class="toogle_wrap radius8">
+                                            <div class="trigger"><a href="#">READ MORE</a></div>
+                                            <div class="toggle_container">
+                                            <p>
+                                        Lorem ipsum <a href="#">dolor sit amet</a>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                            </p>
+                                            </div>
+                                        </div>
+     <!--End of pages--> 
     </div>
-<!--End-Action boxes-->    
-
-
-<!--end-main-container-part-->
-
-
-<!--end-Footer-part-->
+    <div class="pagination"></div>
+  </div>
+<script type="text/javascript" src="vision/files/js/jquery.swipebox.js"></script>
+<script type="text/javascript" src="vision/files/js/idangerous.swiper-2.1.min.js"></script>
+<script type="text/javascript" src="vision/files/js/idangerous.swiper.scrollbar-2.1.js"></script>
+<script type="text/javascript" src="vision/files/js/jquery.tabify.js"></script>
+<script type="text/javascript" src="vision/files/js/plyr.js"></script>
+<script type="text/javascript" src="vision/files/js/code.js"></script>
+<script type="text/javascript" src="vision/files/js/load.js"></script>
+<!--Twitter Feed-->
+<script type="text/javascript" src="vision/files/js/twitter/jquery.tweet.js" charset="utf-8"></script>
+<script type="text/javascript" charset="utf-8">
+var $ = jQuery.noConflict();  
+jQuery(function($){
+$(".tweet").tweet({
+  modpath: 'js/twitter/',
+  join_text: "auto",
+  username: "sindevothemes",
+  count: 5,
+  auto_join_text_default: "we said,",
+  auto_join_text_ed: "we",
+  auto_join_text_ing: "we were",
+  auto_join_text_reply: "we replied",
+  auto_join_text_url: "we were checking out",
+  loading_text: "loading tweets..."
+});
+});
 </script>
-</body>
+<script type="text/javascript">  
+function ajaxContact(theForm) {
+var $ = jQuery;
+$('#loader').fadeIn();
+var formData = $(theForm).serialize(),
+note = $('#Note');
+$.ajax({
+type: "POST",
+url: "contact-send.php",
+data: formData,
+success: function(response) {
+if ( note.height() ) {			
+note.fadeIn('fast', function() { $(this).hide(); });
+} else {
+note.hide();
+}
+$('#LoadingGraphic').fadeOut('fast', function() {
+//$(this).remove();
+if (response === 'success') {
+	$('#formtitle').hide();
+}
+// Message Sent? Show the 'Thank You' message and hide the form
+result = '';
+c = '';
+if (response === 'success') { 
+	result = 'Your message has been sent. Thank you!';
+	c = 'success';
+} else {
+	result = response;
+	c = 'error';
+}
+note.removeClass('success').removeClass('error').text('');
+var i = setInterval(function() {
+	if ( !note.is(':visible') ) {
+		note.html(result).addClass(c).slideDown('fast');
+		clearInterval(i);
+	}
+}, 40);    
+}); // end loading image fadeOut
+}
+});
+return false;
+}
+</script>  
 </html>
