--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -34,6 +34,7 @@
       <ul class="quick-actions">
         <li class="bg_lo span3"> <a href="phy121.html"> <i class="icon-th-list"></i>PHY 121</a> </li>
 <li class="bg_lo span3"> <a href="csc121.html"> <i class="icon-th-list"></i>CSC 121</a> </li>
+<li class="bg_lo span3"> <a href="bot121.html"> <i class="icon-th-list"></i>BOT 121</a> </li>
 
 
       </ul>
