--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>BIU ENG</title>
+<title>BIU Mobile</title>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -13,7 +13,7 @@
 
 <!--Header-part-->
 <div id="header">
-  <h1><a href="dashboard.html">BIU MOBILE</a></h1>
+  <h1><a href="index.html">BIU MOBILE</a></h1>
 </div>
 <!--close-Header-part--> 
 
@@ -24,7 +24,7 @@
 <div id="content">
 <!--breadcrumbs-->
   <div id="content-header">
-    <div id="breadcrumb"> <a href="index.html" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> BIU ENGINEERING DEPARTMENT</a></div>
+    <div id="breadcrumb"> <a href="index.html" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> BIU Mobile</a></div>
   </div>
 <!--End-breadcrumbs-->
 
