--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <meta name="author" content="SindevoThemes" />
 <title>BIU Mobile :: Vision</title>
-<link type="text/css" rel="stylesheet" href="files/vision/css/style.css"/>
-<link type="text/css" rel="stylesheet" href="files/vision/colors/slider/slider.css"/>
-<link type="text/css" rel="stylesheet" href="files/vision/css/idangerous.swiper.css"/>
-<link type="text/css" rel="stylesheet" href="files/vision/css/swipebox.css"/>
-<link type="text/css" rel="stylesheet" href="files/vision/css/plyr.css"/>
-<script type="text/javascript" src="files/vision/js/jquery-1.10.1.min.js"></script>
-<script src="files/vision/js/jquery.validate.min.js" type="text/javascript"></script>
+<link type="text/css" rel="stylesheet" href="vision/files/css/style.css"/>
+<link type="text/css" rel="stylesheet" href="vision/files/colors/slider/slider.css"/>
+<link type="text/css" rel="stylesheet" href="vision/files/css/idangerous.swiper.css"/>
+<link type="text/css" rel="stylesheet" href="vision/files/css/swipebox.css"/>
+<link type="text/css" rel="stylesheet" href="vision/files/css/plyr.css"/>
+<script type="text/javascript" src="vision/files/js/jquery-1.10.1.min.js"></script>
+<script src="vision/files/js/jquery.validate.min.js" type="text/javascript"></script>
 </head>
 <body>
   <div id="header">
-      <div class="gohome radius20"><a href="#"><img src="files/vision/images/icons_contour/home.png" alt="" title="" /></a></div>
-      <div class="gomenu radius20"><a href="#" onclick="swiperParent.swipeTo(9);"><img src="files/vision/images/icons_contour/contact.png" alt="" title="" /></a></div>
+      <div class="gohome radius20"><a href="#"><img src="vision/files/images/icons_contour/home.png" alt="" title="" /></a></div>
+      <div class="gomenu radius20"><a href="#" onclick="swiperParent.swipeTo(9);"><img src="vision/files/images/icons_contour/contact.png" alt="" title="" /></a></div>
   </div>
   <div class="swiper-container swiper-parent">
     <div class="swiper-wrapper">
@@ -29,19 +29,19 @@
                                         <div class="logo"><a href="#">BIU Mobile</a></div>
                                         <div class="flexslider">
                                         <ul class="slides">
-                                            <li><img src="files/vision/colors/slider/images/slide1.jpg" alt="" title=""/></li>
-                                            <li><img src="files/vision/colors/slider/images/slide2.jpg" alt="" title=""/></li>
-                                            <li><img src="files/vision/colors/slider/images/slide3.jpg" alt="" title=""/></li>
+                                            <li><img src="vision/files/colors/slider/images/slide1.jpg" alt="" title=""/></li>
+                                            <li><img src="vision/files/colors/slider/images/slide2.jpg" alt="" title=""/></li>
+                                            <li><img src="vision/files/colors/slider/images/slide3.jpg" alt="" title=""/></li>
                                         </ul>
                                       </div>
                                         <div class="menu">
                                         <ul>
-                                        <li><a href="#"><img src="files/vision/images/icons_contour/about.png" alt="" title="" /><span>Profile</span></a></li>
-                                        <li><a href="#"><img src="files/vision/images/icons_contour/tools.png" alt="" title="" /><span>Campus Life</span></a></li>
-                                        <li><a href="lecturenotes.html"><img src="files/vision/images/icons_contour/docs.png" alt="" title="" /><span>Lecture Notes</span></a></li>
-                                        <li><a href="#"><img src="files/vision/images/icons_contour/photos.png" alt="" title="" /><span>Gallery</span></a></li>
-                                        <li><a href="#"><img src="files/vision/images/icons_contour/clients.png" alt="" title="" /><span>Lecturers</span></a></li>
-                                        <li><a href="#" onclick="swiperParent.swipeTo(2);"><img src="files/vision/images/icons_contour/contact.png" alt="" title="" /><span>Contact</span></a></li>
+                                        <li><a href="#"><img src="vision/files/images/icons_contour/about.png" alt="" title="" /><span>Profile</span></a></li>
+                                        <li><a href="#"><img src="vision/files/images/icons_contour/tools.png" alt="" title="" /><span>Campus Life</span></a></li>
+                                        <li><a href="lecturenotes.html"><img src="vision/files/images/icons_contour/docs.png" alt="" title="" /><span>Lecture Notes</span></a></li>
+                                        <li><a href="#"><img src="vision/files/images/icons_contour/photos.png" alt="" title="" /><span>Gallery</span></a></li>
+                                        <li><a href="#"><img src="vision/files/images/icons_contour/clients.png" alt="" title="" /><span>Lecturers</span></a></li>
+                                        <li><a href="#" onclick="swiperParent.swipeTo(2);"><img src="vision/files/images/icons_contour/contact.png" alt="" title="" /><span>Contact</span></a></li>
                                         </ul>
                                         <div class="clearfix"></div>
                                         </div>
@@ -99,11 +99,11 @@
                                                   <li id="postid2">
                                                 <a class="backtoblog">back to Notifications</a>
                                                     <h2 class="post_title">BIU Mobile app.</h2>
-                                                    <div class="image_single"><img src="files/vision/images/page_photo.jpg" alt="" title="" border="0" /></div>
+                                                    <div class="image_single"><img src="vision/files/images/page_photo.jpg" alt="" title="" border="0" /></div>
                                                     <h3>Imagination is our power</h3>
                                                     <p>Welcome to BIU  Mobile application an application to get your class lecture notes and other important informations.  <br /><br /> Enjoy.</p>
                                                 </ul>
- 										<div class="scrolltop radius20"><a href="#"><img src="files/vision/images/icons_contour/top.png" alt="Go on top" title="Go on top" /></a></div>
+ 										<div class="scrolltop radius20"><a href="#"><img src="vision/files/images/icons_contour/top.png" alt="Go on top" title="Go on top" /></a></div>
                                         </div>
                                         <!--End of page container-->
                               </div>
@@ -137,17 +137,17 @@
                                             </div>
                                        <h2>Let's socialize</h2>     
                                             <ul class="social">
-                                            <li class="social_facebook"><a href="#"><img src="files/vision/images/icons_contour/social/facebook.png" alt="" title="" border="0" /></a></li>
-                                            <li class="social_twitter"><a href="#"><img src="files/vision/images/icons_contour/social/twitter.png" alt="" title="" border="0" /></a></li>
-                                            <li class="social_google"><a href="#"><img src="files/vision/images/icons_contour/social/google.png" alt="" title="" border="0" /></a></li>
-                                            <li class="social_pinterest"><a href="#"><img src="files/vision/images/icons_contour/social/pinterest.png" alt="" title="" border="0" /></a></li>
-                                            <li class="social_flickr"><a href="#"><img src="files/vision/images/icons_contour/social/flickr.png" alt="" title="" border="0" /></a></li>
-                                            <li class="social_digg"><a href="#"><img src="files/vision/images/icons_contour/social/digg.png" alt="" title="" border="0" /></a></li>
+                                            <li class="social_facebook"><a href="#"><img src="vision/files/images/icons_contour/social/facebook.png" alt="" title="" border="0" /></a></li>
+                                            <li class="social_twitter"><a href="#"><img src="vision/files/images/icons_contour/social/twitter.png" alt="" title="" border="0" /></a></li>
+                                            <li class="social_google"><a href="#"><img src="vision/files/images/icons_contour/social/google.png" alt="" title="" border="0" /></a></li>
+                                            <li class="social_pinterest"><a href="#"><img src="vision/files/images/icons_contour/social/pinterest.png" alt="" title="" border="0" /></a></li>
+                                            <li class="social_flickr"><a href="#"><img src="vision/files/images/icons_contour/social/flickr.png" alt="" title="" border="0" /></a></li>
+                                            <li class="social_digg"><a href="#"><img src="vision/files/images/icons_contour/social/digg.png" alt="" title="" border="0" /></a></li>
                                             </ul>
                                         <h2>Give Us a call</h2>    
                                         <a href="tel:09064108612" class="call_button">Click To Call Now!</a>
                                         <div class="clearfix"></div>
-                                        <div class="scrolltop radius20"><a href="#"><img src="files/vision/images/icons_contour/top.png" alt="Go on top" title="Go on top" /></a></div>    
+                                        <div class="scrolltop radius20"><a href="#"><img src="vision/files/images/icons_contour/top.png" alt="Go on top" title="Go on top" /></a></div>    
                                         </div>
                                         <!--End of page container-->
                               </div>
@@ -160,15 +160,15 @@
     </div>
     <div class="pagination"></div>
   </div>
-<script type="text/javascript" src="files/vision/js/jquery.swipebox.js"></script>
-<script type="text/javascript" src="files/vision/js/idangerous.swiper-2.1.min.js"></script>
-<script type="text/javascript" src="files/vision/js/idangerous.swiper.scrollbar-2.1.js"></script>
-<script type="text/javascript" src="files/vision/js/jquery.tabify.js"></script>
-<script type="text/javascript" src="files/vision/js/plyr.js"></script>
-<script type="text/javascript" src="files/vision/js/code.js"></script>
-<script type="text/javascript" src="files/vision/js/load.js"></script>
+<script type="text/javascript" src="vision/files/js/jquery.swipebox.js"></script>
+<script type="text/javascript" src="vision/files/js/idangerous.swiper-2.1.min.js"></script>
+<script type="text/javascript" src="vision/files/js/idangerous.swiper.scrollbar-2.1.js"></script>
+<script type="text/javascript" src="vision/files/js/jquery.tabify.js"></script>
+<script type="text/javascript" src="vision/files/js/plyr.js"></script>
+<script type="text/javascript" src="vision/files/js/code.js"></script>
+<script type="text/javascript" src="vision/files/js/load.js"></script>
 <!-- FlexSlider -->
-<script type="text/javascript" src="files/vision/js/jquery.flexslider-min.js"></script>
+<script type="text/javascript" src="vision/files/js/jquery.flexslider-min.js"></script>
 <script type="text/javascript" charset="utf-8">
 var $ = jQuery.noConflict();
   $(document).ready(function() {
