--- a/csc121.html
+++ b/csc121.html
@@ -37,6 +37,16 @@
 
       </ul>
     </div>
+    
+     <div class="container-fluid">
+    <div class="quick-actions_homepage">
+      <ul class="quick-actions">
+        <li class="bg_lo span3"> <a href="#"> <i class="icon-th-list"></i>O.O.P</a> </li>
+
+
+      </ul>
+    </div>
+<
 <!--End-Action boxes-->    
 
 
