--- a/csc121.html
+++ b/csc121.html
@@ -41,7 +41,7 @@
      <div class="container-fluid">
     <div class="quick-actions_homepage">
       <ul class="quick-actions">
-        <li class="bg_lo span3"> <a href="https://drive.google.com/file/d/17ywgPZYmv86eH0JtGE15CoOPiqjEkw4J/view?usp=drivesdk"> <i class="icon-th-list"></i>O.O.P</a> </li>
+        <li class="bg_lo span3"> <a href="https://drive.google.com/file/d/17ywgPZYmv86eH0JtGE15CoOPiqjEkw4J/view?usp=drivesdk"> <i class="icon-th-list"></i>Object Oriented Programming</a> </li>
 
 
       </ul>
