--- a/phy121.html
+++ b/phy121.html
@@ -37,6 +37,24 @@
 
       </ul>
     </div>
+
+      <div class="container-fluid">
+    <div class="quick-actions_homepage">
+      <ul class="quick-actions">
+        <li class="bg_lo span3"> <a href="https://drive.google.com/open?id=18TaXyMzS41hkyPbyO2GME98C0TjQWpV_"> <i class="icon-th-list"></i>Capacitors</a> </li>
+
+
+      </ul>
+    </div>
+
+          <div class="container-fluid">
+    <div class="quick-actions_homepage">
+      <ul class="quick-actions">
+        <li class="bg_lo span3"> <a href="https://drive.google.com/open?id=18BfulcVx_UdzcqDRSqWBcYeIueG_nFEW"> <i class="icon-th-list"></i>Conductors and Insulators</a> </li>
+
+
+      </ul>
+    </div>
 <!--End-Action boxes-->    
 
 
